# tigerbench

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tigerbench/: classification.py  evaluate.py  reconstruction.py  registry.py  segmentation.py  text.py  utils.py
